# Labs2

CSV/: CSV.pro  CSV.pro.user.ff8f189.22  arrays.cpp  arrays.h  data.h  drawframe.cpp  drawframe.h  enterpoint.cpp  enterpoint.h  logic.cpp  logic.h  main.cpp  mainwindow (copy)онпа.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mylistwidget.cpp  mylistwidget.h  queue.cpp  queue.h
CSV/libraries/: mystring.cpp  mystring.h  strbase.c
Calculator/: Calculator.pro  datatypes.h  entrypoint.cpp  entrypoint.h  logic.cpp  logic.h  logoperator.cpp  logoperator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathfuncs.cpp  mathfuncs.h  typesdata.cpp  typesdata.h
Figure/: CMakeLists.txt  Circle.cpp  Circle.h  Figure.cpp  Figure.h  Menu.cpp  Menu.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  UniversalException.cpp  UniversalException.h  main.cpp
Labs2/MainWindow/: MainWindow.pro  data.cpp  data.h  enterpoint.cpp  enterpoint.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Labs2/build-MainWindow-Desktop-Debug/: MainWindow  Makefile  moc_mainwindow.cpp  qmake_qmake_qm_files.qrc  qrc_qmake_qmake_qm_files.cpp  (+1 more)
List/: CMakeLists.txt  list.cpp  list.h  main.cpp
MainWindow/: MainWindow.pro.user.09de55a.22  data.cpp  data.h  enterpoint.cpp  enterpoint.h  logic.cpp  logic.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
MainWindow1/: MainWindow.pro  MainWindow.pro.user.f87becc.4.8-pre1  data.cpp  data.h  enterpoint.cpp  enterpoint.h  logic.cpp  logic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+7 files in other folders)
